# rnp

./: .cirrus.yml  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  Brewfile  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Developers Guide.md  LICENSE-OCB.md  LICENSE.md  Makefile.am  README.adoc  README.md  RNP_Testcase_Specifiction.md  RNP_Testcase_description.docx  _typos.toml  ax_check_botan.m4  ax_check_openssl.m4  build-install.sh  build.sh  build_common.inc.sh  build_macos.sh  build_main.inc.sh  build_rpm.sh  codecov.yml  configure.ac  default.nix  docker.sh  flake.nix  netpgp-rpm-2.spec  package.sh  prepare_build.sh  remove_artifacts.sh  slhdsa_pk_tmp  slhdsa_sk_tmp  (+3 more)
src/cmocka/: Makefile.am  password.txt  rnp_tests.c  rnp_tests.h  rnp_tests_cipher.c  rnp_tests_exportkey.c  rnp_tests_generatekey.c  rnp_tests_support.c  rnp_tests_support.h
src/common/: .constants.h.swp  CMakeLists.txt  constants.h  file-utils.cpp  file-utils.h  mkstemp.cpp  mkstemp.h  str-utils.cpp  str-utils.h  time-utils.cpp  time-utils.h  uniwin.h  utils.h
src/examples/: CMakeLists.txt  README.md  decrypt.c  decrypt.cpp  dump.c  encrypt.c  encrypt.cpp  generate.c  generate.cpp  sign.c  sign.cpp  verify.c  verify.cpp
src/fuzzing/: CMakeLists.txt  Makefile.am  dump.c  fuzz_keys.c  keyimport.c  keyring.c  keyring_g10.cpp  keyring_kbx.c  sigimport.c  verify.c  verify_detached.c
src/lib/: CMakeLists.txt  Makefile.am  bn.c  bn.h  bufgap.c  bufgap.cpp  bufgap.h  compress.c  compress.h  config.h.in  crc24_radix64.c  crc24_radix64.h  create.c  create.h  crypto.c  crypto.cpp  crypto.h  defaults.h  defs.h  dsa.c  dsa.h  ec.c  ec.h  ecdh.c  ecdh.h  ecdsa.c  ecdsa.h  eddsa.c  eddsa.h  elgamal.c  elgamal.h  enc_material.cpp  enc_material.hpp  errors.h  ffi-priv-types.h  fingerprint.c  fingerprint.cpp  fingerprint.h  fingerprint.hpp  generate-key.c  (+109 more)
src/lib/crypto/: backend_version.cpp  backend_version.h  bn.c  bn.cpp  bn.h  bn_ossl.cpp  botan_utils.hpp  cipher.cpp  cipher.hpp  cipher_botan.cpp  cipher_botan.hpp  cipher_ossl.cpp  cipher_ossl.hpp  common.h  dilithium.cpp  dilithium.h  dilithium_common.cpp  dilithium_common.h  dilithium_exdsa_composite.cpp  dilithium_exdsa_composite.h  dilithium_ossl.cpp  dl_ossl.cpp  dl_ossl.h  dsa.c  dsa.cpp  dsa.h  dsa_common.cpp  dsa_common.h  dsa_ossl.cpp  ec.c  ec.cpp  ec.h  ec_curves.cpp  ec_ossl.cpp  ec_ossl.h  ecdh.c  ecdh.cpp  ecdh.h  ecdh_ossl.cpp  ecdh_utils.cpp  (+95 more)
src/lib/crypto/sha1cd/: hash_sha1cd.cpp  hash_sha1cd.h
src/librekey/: Makefile.am  g10_sexp.hpp  g23_sexp.hpp  kbx_blob.hpp  key_store_g10.c  key_store_g10.cpp  key_store_g10.h  key_store_internal.h  key_store_kbx.c  key_store_kbx.cpp  key_store_kbx.h  key_store_pgp.c  key_store_pgp.cpp  key_store_pgp.h  key_store_ssh.c  key_store_ssh.cpp  key_store_ssh.h  rnp_key_store.c  rnp_key_store.cpp
src/librepgp/: Makefile.am  internal_types.h  packet-parse.c  packet-parse.cpp  packet-parse.h  packet-print.c  packet-print.cpp  packet-print.h  packet-show.c  packet-show.cpp  packet-show.h  pass-provider.c  reader.c  reader.cpp  reader.h  repgp.c  repgp.cpp  stream-armor.c  stream-armor.cpp  stream-armor.h  stream-armour.c  stream-armour.h  stream-common.c  stream-common.cpp  stream-common.h  stream-ctx.cpp  stream-ctx.h  stream-def.h  stream-dump.c  stream-dump.cpp  stream-dump.h  stream-key.c  stream-key.cpp  stream-key.h  stream-packet.c  stream-packet.cpp  stream-packet.h  stream-parse.c  stream-parse.cpp  stream-parse.h  (+11 more)
src/netpgpverify/: Makefile.am  bzlib.h  bzlib_private.h  config.h.in  configure  libverify.c  main.c  netpgpverify  pgpsum.c  platform.h
src/rnpkeys/: CMakeLists.txt  Makefile.am  main.c  main.cpp  rnpkeys.1  rnpkeys.1.adoc  rnpkeys.1.md  rnpkeys.c  rnpkeys.cpp  rnpkeys.h  tui.c  tui.cpp
src/rnpv/: Makefile.am  Makefile.bsd  Makefile.lib.in  Makefile.libtool.in  array.h  b64.c  b64.h  bufgap.c  bufgap.h  chk.sh  config.h.in  data  defs.h  digest.c  digest.h  librnpv.3  libverify.c  main.c  md5.h  md5c.c  misc.c  misc.h  mkdist  pgpsum.c  pgpsum.h  platform.h  rmd160.c  rmd160.h  rnpv.1  rsa.c  sha1.c  sha1.h  sha2.c  sha2.h  tiger.c  tiger.h  verify.h
src/tests/: CMakeLists.txt  Makefile.am  boosttest-test.cpp  catch2-test.cpp  catch2.cpp  cipher.c  cipher.cpp  cipher_cxx.cpp  cli.c  cli.cpp  cli_common.py  cli_perf.py  cli_tests.py  exdsa_ecdhkem.cpp  exportkey.c  exportkey.cpp  ffi-enc.cpp  ffi-key-prop.cpp  ffi-key-sig.cpp  ffi-key.cpp  ffi-uid.cpp  ffi.c  ffi.cpp  file-utils.cpp  fuzz_dump.cpp  fuzz_keyimport.cpp  fuzz_keyring.cpp  fuzz_keyring_g10.cpp  fuzz_keyring_kbx.cpp  fuzz_verify.cpp  fuzz_verify_detached.cpp  generatekey.c  generatekey.cpp  gnupg.py  gtest-CMakeLists.txt.in  gtest-test.cpp  hkdf.cpp  kbx-nsigs-test.cpp  key-add-userid.c  key-add-userid.cpp  (+45 more)
src/tests/data/: .gitattributes  GnuPG_dsa_elgamal_1024_1024-sec.gpg  GnuPG_dsa_elgamal_1024_1024.gpg  GnuPG_dsa_elgamal_1024_2048.gpg  GnuPG_dsa_elgamal_1234_1234.gpg  GnuPG_dsa_elgamal_2048_2048.gpg  GnuPG_dsa_elgamal_2112_2112.gpg  GnuPG_dsa_elgamal_3072_3072-sec.gpg  GnuPG_rsa_2048_2048.gpg  GnuPG_rsa_3072_3072-sec.gpg  GnuPG_rsa_4096_4096-sec.gpg  GnuPG_rsa_4096_4096.gpg  Rnp_dsa_elgamal_1024_1024-sec.gpg  Rnp_dsa_elgamal_1024_1024.gpg  Rnp_dsa_elgamal_1024_2048-sec.gpg  Rnp_dsa_elgamal_1024_2048.gpg  Rnp_dsa_elgamal_2048_2048-sec.gpg  Rnp_dsa_elgamal_2048_2048.gpg  Rnp_rsa_1024_1024-sec.gpg  Rnp_rsa_1024_1024.gpg  Rnp_rsa_2048_2048-sec.gpg  Rnp_rsa_2048_2048.gpg  Rnp_rsa_3072_3072-sec.gpg  Rnp_rsa_3072_3072.gpg  Rnp_rsa_4096_4096-sec.gpg  Rnp_rsa_4096_4096.gpg  regenerate_keys
src/tests/data/cli_EncryptSign/: GnuPG_dsa_elgamal_1024_1024-sec.gpg  GnuPG_dsa_elgamal_1024_1024.gpg  GnuPG_dsa_elgamal_1024_2048-sec.gpg  GnuPG_dsa_elgamal_1024_2048.gpg  GnuPG_dsa_elgamal_1234_1234-sec.gpg  GnuPG_dsa_elgamal_1234_1234.gpg  GnuPG_dsa_elgamal_2048_2048-sec.gpg  GnuPG_dsa_elgamal_2048_2048.gpg  GnuPG_dsa_elgamal_2112_2112-sec.gpg  GnuPG_dsa_elgamal_2112_2112.gpg  GnuPG_dsa_elgamal_3072_3072-sec.gpg  regenerate_keys  (+9 more)
src/tests/issues/: 1030.cpp  1171.cpp  oss-fuzz-25489.cpp
(+396 files in other folders)
